# Morgenmuffel

./: .clang-format  .cproject  .project  CMakeLists.txt  README.md  Workspace.code-workspace  prj.conf
Tools/FontGenerator/: characters_FreeSans_16.txt  characters_FreeSans_32.txt  dab_ebu_chartable.c  dab_ebu_chartable.py  fontrender.py
boards/arm/morgenmuffel/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  display_powersupply.c  morgenmuffel.dts  morgenmuffel.yaml  morgenmuffel_defconfig  pinmux.c
doc/: si468x_interrupts.txt
drivers/apds9301/zephyr/: CMakeLists.txt  Kconfig  apds9301.c
drivers/ms5637/zephyr/: CMakeLists.txt  Kconfig  ms5637.c  ms5637.h
drivers/sht2x/zephyr/: CMakeLists.txt  Kconfig  sht2x.c  sht2x.h
drivers/si4689/zephyr/: CMakeLists.txt  Kconfig  si4689.c  si468x_commands.h
drivers/si468x/zephyr/: CMakeLists.txt  Kconfig  module.yml  si468x.c  si468x.h  si468x_commands.c  si468x_commands.h  si468x_dab.c  (+3 more)
drivers/vs1053/: CMakeLists.txt  vs1053.c
dts/bindings/: avago,apds9301.yaml  meas,ms5637.yaml  sensirion,sht2x.yaml  silabs,si4689.yaml  silabs,si468x.yaml  vlsi,vs1053.yaml
schema/: .gitignore  Amplifier.kicad_sch  AudioOut.kicad_sch  BlueTooth.kicad_sch  Button.kicad_sch  CPU.kicad_sch  Crossover.kicad_sch  DECT.kicad_sch  Display.kicad_sch  Encoder.kicad_sch  Ethernet.kicad_sch  JTAG.kicad_sch  Mainboard-rescue.kicad_sym  Mainboard.cmp  Mainboard.kicad_pro  Mainboard.kicad_sch  Mainboard.kicad_sym  Mainboard.net  Memory.kicad_sch  Panel.kicad_sch  Power.kicad_sch  SDCard.kicad_sch  SI4689.kicad_sch  USB.kicad_sch  VS1053.kicad_sch  Wireless.kicad_sch  d_pack.kicad_sym  fp-lib-table  si468x.kicad_sym  stm32f2.kicad_sym  sym-lib-table  vs10xx.kicad_sym
schema/Modules_various.pretty/: BLK-MD-SPK-B.kicad_mod  SC14CVMDECT_SF.kicad_mod
schema/Olimex.pretty/: MOD-WIFI-ESP8266-DEV.kicad_mod
schema/QFN.pretty/: QFN_24.kicad_mod  QFN_40.kicad_mod  QFN_48.kicad_mod
schema/Scripts/: Stueckliste.py
schema/TSOP.pretty/: 44-TSOP-II.kicad_mod  48-TSOP-I.kicad_mod
schema/Various.pretty/: 7499010211A.kicad_mod  BNX02x.kicad_mod  Bourns_SRN6045.kicad_mod  Choke_Panasonic_10mm.kicad_mod  EEC-RG0V105V.kicad_mod  Encoder_Alps_EC11J.kicad_mod  F-Connector.kicad_mod  FC68148S.kicad_mod  FPC_24.kicad_mod  Inductor_12x12mm_Wuerth.kicad_mod  Inductor_3x2mm_Wuerth.kicad_mod  Inductor_LPS3015.kicad_mod  JST_SDK-9BNS-K13-GS-TB.kicad_mod  LED-PLCC4.kicad_mod  M50-3610542.kicad_mod  PKLCS1212E2000-R1.kicad_mod  Powermite.kicad_mod  SOT-983-1.kicad_mod  USB_A_SMD.kicad_mod  USB_Micro_SMD.kicad_mod
schema/plot_files/: Mainboard-B.Cu.gbr  Mainboard-B.Mask.gbr  Mainboard-B.SilkS.gbr  Mainboard-Dwgs.User.gbr  Mainboard-Edge.Cuts.gbr  Mainboard-F.Cu.gbr  Mainboard-F.Mask.gbr  Mainboard-F.SilkS.gbr  Mainboard-In1.Cu.gbr  Mainboard-In2.Cu.gbr  Mainboard-NPTH.drl  Mainboard-PTH.drl
src/: display.c  display.h  events.c  events.h  free_sans_16.c  free_sans_32.c  main.c  parameters.h  playlist.c  playlist.h  power.c  power.h  powersupply.c  powersupply.h  storage.c  storage.h  system.c  system.h  usb_device.c  usb_device.h  usb_device_handler.c  usb_device_handler.h  userinput.c
src/display/: display.c  display.h  display_handler.c  font.c  font_FreeSans_16.c  font_FreeSans_32.c
src/include/: display.h  display_handler.h  font.h  gpio_pins.h  hardwareconfig.h  parameters.h  playlist.h  power.h  storage.h
tests/vs1053/: .cproject  .project  CMakeLists.txt  prj.conf
tests/vs1053/src/: main.c
(+4 files in other folders)
